# ulp_3_io_wakeup_esp32

./: README.md  sdkconfig
components/: CMakeLists.txt  component.mk  ulp_main_service.c
components/ulp_wake/ulp/: pulse_cnt.S
main/: CMakeLists.txt  main.c  main.h  ulp_example_main.c
main/ulp/: pulse_cnt.S
